--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,7 +3,10 @@ spring.datasource.url=jdbc:h2:mem:bankdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=false
-spring.sql.init.mode=never
+# ----
+# For test environments.
+spring.sql.init.mode=always
+# ----
 spring.jpa.hibernate.ddl-auto=none
 springdoc.swagger-ui.enabled=false
 springdoc.api-docs.enabled=false
